--- a/style.css
+++ b/style.css
@@ -1,4 +1,4 @@
-@import url('https://fonts.googleapis.com/css2?family=Playfair+Display:wght@500&display=swap');
+@import url('https://fonts.googleapis.com/css2?family=Noto+Sans+TC&display=swap');
 * {
     margin: 0;
     padding: 0;
@@ -11,7 +11,7 @@ html {
 
 body {
     width: 100%;
-    font-family: 'Playfair Display', serif;
+    font-family: 'Noto Sans TC', sans-serif;
     font-size: 30px;
 }
 
